--- a/council_finance/templates/council_finance/my_lists_enhanced.html
+++ b/council_finance/templates/council_finance/my_lists_enhanced.html
@@ -249,7 +249,7 @@
 {% block extra_scripts %}
 {{ block.super }}
 <!-- Load the compiled React app -->
-<script type="module" src="{% static 'frontend/main-CVDqGnP2.js' %}"></script>
+<script type="module" src="{% static 'frontend/main-DCKgZfUG.js' %}"></script>
 <link rel="stylesheet" href="{% static 'frontend/main-BlzmEwI8.css' %}">
 
 <!-- Fallback timeout -->
